--- a/html/full-intro.html
+++ b/html/full-intro.html
@@ -7,10 +7,12 @@
     <dd>提供了前端开发时常用工具：项目管理、包管理、调试、构建、代码生成、代码检测等，并允许用户自定义扩展。</dd>
     <dt><a target="_blank" href="http://ecomfe.github.io/est/">EST</a></dt>
     <dd>基于 Less 的样式工具库，提供了一系列方便快捷的 mixin，只在调用时才输出代码。</dd>
-    <dt><a target="_blank" href="http://ecomfe.github.io/saber/">Saber</a></dt>
-    <dd>提供了 JavaScript 模块、CSS 样式库与开发平台的完整前端解决方案。擅长移动端 SPA 项目、轻应用。</dd>
-    <dt><a target="_blank" href="https://github.com/ecomfe/rider">Rider</a></dt>
-    <dd>专为移动端设计的 Mixin 风格样式工具库。在其基础上创建了 Rider UI，一个灵活的 UI 样式库。</dd>
+    <dt><a target="_blank" href="http://ecomfe.github.io/fate/#saber">Saber</a></dt>
+    <dd>为移动端与现代浏览器设计的，细粒度、模块化的前端应用框架。</dd>
+    <dt><a target="_blank" href="http://ecomfe.github.io/fate/#rebas">Rebas</a></dt>
+    <dd>与 Saber 搭配使用、基于 Node 的 JavaScript 同构解决方案。</dd>
+    <dt><a target="_blank" href="http://ecomfe.github.io/fate/#rider">Rider</a></dt>
+    <dd>基于 Stylus 与后处理器，无侵入风格的 CSS 样式工具库。</dd>
     <dt><a target="_blank" href="https://github.com/ecomfe/er">ER</a></dt>
     <dd>富浏览器端 web 应用的框架，适用于并能很方便地构建一个整站式的 AJAX web 应用。</dd>
     <dt><a target="_blank" href="https://github.com/ecomfe/esui">ESUI</a></dt>
