--- a/html/full-intro.html
+++ b/html/full-intro.html
@@ -3,7 +3,7 @@
     <dd>直观，生动，可交互，可高度个性化定制的数据可视化图表。</dd>
     <dt><a target="_blank" href="https://github.com/ecomfe/esl">ESL</a></dt>
     <dd>比 Require.js 更精简、更高效、更健壮的 AMD Loader。</dd>
-    <dt><a target="_blank" href="https://github.com/ecomfe/edp">EDP</a></dt>
+    <dt><a target="_blank" href="http://ecomfe.github.io/edp/">EDP</a></dt>
     <dd>提供了前端开发时常用工具：项目管理、包管理、调试、构建、代码生成、代码检测等，并允许用户自定义扩展。</dd>
     <dt><a target="_blank" href="http://ecomfe.github.io/est/">EST</a></dt>
     <dd>基于 Less 的样式工具库，提供了一系列方便快捷的 mixin，只在调用时才输出代码。</dd>
