--- a/html/full-intro.html
+++ b/html/full-intro.html
@@ -14,7 +14,7 @@
     <dt><a target="_blank" href="http://ecomfe.github.io/fate/#rider">Rider</a></dt>
     <dd>基于 Stylus 与后处理器，无侵入风格的 CSS 样式工具库。</dd>
     <dt><a target="_blank" href="https://github.com/ecomfe/er">ER</a></dt>
-    <dd>富浏览器端 web 应用的框架，适用于并能很方便地构建一个整站式的 AJAX web 应用。</dd>
+    <dd>富浏览器端 Web 应用的框架，适用于并能很方便地构建一个整站式的 AJAX Web 应用。</dd>
     <dt><a target="_blank" href="https://github.com/ecomfe/esui">ESUI</a></dt>
     <dd>一套功能完善，并具有强大扩展机制的 UI 组件库。基于模板、声明式地编程方式让视图更具表达能力。</dd>
     <dt><a target="_blank" href="http://ecomfe.github.io/etpl">ETpl</a></dt>
