--- a/html/full-intro.html
+++ b/html/full-intro.html
@@ -25,6 +25,8 @@
     <dd>一个向广大用户提供数据可视化服务平台。</dd>
     <dt><a target="_blank" href="http://ecomfe.github.io/fontmin/">Fontmin</a></dt>
     <dd>第一个纯 JavaScript 字体子集化方案，让 @font-face 在中文世界成为可能。</dd>
+    <dt><a target="_blank" href="http://fecs.baidu.com/">FECS</a></dt>
+    <dd>前端代码风格检查套件，包含 HTML、CSS、JavaScript 与 Less 代码的检查与修复。</dd>
     <dt><a target="_blank" href="http://efe.baidu.com/">......</a></dt>
     <dd>更多来自百度 EFE 的项目与文章。</dd>
 </dl>
