--- a/html/full-intro.html
+++ b/html/full-intro.html
@@ -1,4 +1,6 @@
 <dl>
+    <dt><a target="_blank" href="http://fecs.baidu.com/">FECS</a></dt>
+    <dd>前端代码风格检查套件，包含 HTML、CSS、JavaScript 与 Less 代码的检查与修复。</dd>
     <dt><a target="_blank" href="http://echarts.baidu.com/">ECharts</a></dt>
     <dd>直观，生动，可交互，可高度个性化定制的数据可视化图表。</dd>
     <dt><a target="_blank" href="https://github.com/ecomfe/esl">ESL</a></dt>
@@ -13,20 +15,18 @@
     <dd>与 Saber 搭配使用、基于 Node 的 JavaScript 同构解决方案。</dd>
     <dt><a target="_blank" href="http://ecomfe.github.io/fate/#rider">Rider</a></dt>
     <dd>基于 Stylus 与后处理器，无侵入风格的 CSS 样式工具库。</dd>
+    <dt><a target="_blank" href="https://ecomfe.github.io/san/">San</a></dt>
+    <dd>一套 MVVM 的组件框架，体积小、性能高、兼容性好，适用于 SPA 和传统 Web 应用。</dd>
     <dt><a target="_blank" href="https://github.com/ecomfe/er">ER</a></dt>
     <dd>富浏览器端 Web 应用的框架，适用于并能很方便地构建一个整站式的 AJAX Web 应用。</dd>
     <dt><a target="_blank" href="https://github.com/ecomfe/esui">ESUI</a></dt>
     <dd>一套功能完善，并具有强大扩展机制的 UI 组件库。基于模板、声明式地编程方式让视图更具表达能力。</dd>
     <dt><a target="_blank" href="http://ecomfe.github.io/etpl">ETpl</a></dt>
     <dd>强复用、灵活、高性能的 JavaScript 模板引擎。</dd>
-    <dt><a target="_blank" href="http://be-fe.github.io/iSlider/">iSlider</a></dt>
-    <dd>表现出众，无任何插件依赖的手机平台 JavaScript 滑动组件。</dd>
     <dt><a target="_blank" href="http://tushuo.baidu.com/">图说</a></dt>
     <dd>一个向广大用户提供数据可视化服务平台。</dd>
     <dt><a target="_blank" href="http://ecomfe.github.io/fontmin/">Fontmin</a></dt>
     <dd>第一个纯 JavaScript 字体子集化方案，让 @font-face 在中文世界成为可能。</dd>
-    <dt><a target="_blank" href="http://fecs.baidu.com/">FECS</a></dt>
-    <dd>前端代码风格检查套件，包含 HTML、CSS、JavaScript 与 Less 代码的检查与修复。</dd>
     <dt><a target="_blank" href="http://efe.baidu.com/">......</a></dt>
     <dd>更多来自百度 EFE 的项目与文章。</dd>
 </dl>
